--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,9 @@
 <resources>
-    <string name="app_name">Handicraft Horizon</string>
+    <string name="app_name">Food Med</string>
     <string name="title_activity_admin_dashboard">AdminDashboard</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">Categories</string>
-    <string name="title_product">Products</string>
+    <string name="title_product">Add Products</string>
     <string name="title_profile">Profile</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
